--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -444,3 +444,18 @@
     font-weight: 400;
   }
 }
+
+.uq-footer--mobile .uq-accordion__toggle {
+  margin-bottom: 0;
+  position: unset;
+  padding-left: 1.5rem;
+  padding: 1rem 4.5rem 1rem 1.5rem;
+}
+
+.uq-footer__navigation--is-open .uq-footer__navigation-level-2 {
+  height: auto;
+  overflow: hidden;
+}
+.uq-accordion__content:not(.uq-accordion__content--active) {
+  display: none;
+}
