--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -204,7 +204,7 @@
   <nav class="slide-menu global-mobile-nav" id="global-mobile-nav"   aria-label="primary navigation mobile">
     <ul>
       <li class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
-        <a class="uq-header__newglobal-nav-link global-mobile-nav__audience-link slide-menu__control" href="#">Study</a>
+        <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Study</a>
         <ul>
           <li>
             <a href="https://study.uq.edu.au/" data-gtm-label="Study > Study overview">Study overview</a>
@@ -248,7 +248,7 @@
         </ul>
       </li>
       <li  class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
-        <a  class="uq-header__newglobal-nav-link global-mobile-nav__audience-link slide-menu__control" href="#">Research</a>
+        <a  class="uq-header__newglobal-nav-link slide-menu__control" href="#">Research</a>
         <ul>
           <li>
             <a href="https://research.uq.edu.au/" data-gtm-label="Research > Research overview">Research overview</a>
@@ -285,7 +285,7 @@
         </ul>
       </li>
       <li  class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
-        <a class="uq-header__newglobal-nav-link global-mobile-nav__audience-link slide-menu__control" href="#">Partners and community</a> 
+        <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">Partners and community</a> 
         <ul>
           <li>
             <a href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community > Partners and community overview">Partners and community overview</a>
@@ -323,7 +323,7 @@
         </ul>
       </li>
       <li class="uq-header__newglobal-nav-item" data-gtm-category="Primary header">
-        <a class="uq-header__newglobal-nav-link global-mobile-nav__audience-link slide-menu__control" href="#">About</a>
+        <a class="uq-header__newglobal-nav-link slide-menu__control" href="#">About</a>
         <ul>
           <li>
             <a href="https://about.uq.edu.au/" data-gtm-label="About > About overview">About overview</a>
