fix to mobile title

--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -779,6 +779,7 @@ body.no-scroll {
     padding: 1rem 1.5rem;
     font-size: 1rem;
     font-weight: 500;
+    display:block;
     
     &:hover {
       background: none;
