--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -770,7 +770,7 @@ body.no-scroll {
 
   .uq-site-header__title-container {
     margin: 0;
-    padding-left: 1rem 1.5rem;
+    padding: 1rem 1.5rem;
   }
 
   .uq-site-header__title {
