CXP-14689: QA feedback.

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -139,8 +139,12 @@
       }
       line-height: core.$line-height;
       font-weight: core.$font-weight-normal;
-      margin-left: core.$space-xl;
+      margin-left: core.$space-compressed-uuul;
       padding: core.$space-stretched-s core.$space-m core.$space-stretched-s core.$space-s;
+
+      @media #{core.$screen-lg-up} {
+        margin-left: core.$space-xl;
+      }
 
       &::before {
         content: '';
