--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -793,3 +793,37 @@ body.no-scroll {
 .uq-site-header__navigation-toggle {
   display: none;
 }
+
+//D7 and D9 search fixes (due to missing form component)
+.uq-header__search-range {
+  display: inline-block;
+}
+
+.uq-header__search-range input[type="radio"] {
+  height: 20px;
+  width: 20px;
+  vertical-align: top;
+  display: inline-block;
+  border-radius: 50%;
+  background-color: core.$uq-purple;
+}
+
+.uq-header__search-range label {
+  color: core.$uq-white;
+  font-weight: 400;
+  display: inline-block;
+  vertical-align: top;
+}
+
+input[type="radio"].uq-header__search-radio:checked {
+  border-color: core.$uq-white;
+}
+
+input[type="radio"].uq-header__search-radio:focus {
+  border-color: core.$uq-white;
+}
+
+input[type="radio"].uq-header__search-radio:checked::after {
+  content:"";
+  background-color: core.$uq-white;
+}
