added search autocomplete off

--- a/packages/storybook-html/src/components/header/header.html
+++ b/packages/storybook-html/src/components/header/header.html
@@ -379,7 +379,7 @@
         <fieldset>
           <div class="uq-header__search-query">
             <label for="edit-q" class="visually-hidden uq-header__search-query-label">Search term</label>
-            <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" class="uq-header__search-query-input" data-gtm-trigger="change" data-gtm-form-search>
+            <input type="text" id="edit-q" name="q" value="" maxlength="128" placeholder="Search by keyword" autocomplete="off" class="uq-header__search-query-input" data-gtm-trigger="change" data-gtm-form-search>
             <span class="uq-header__search-query-button">
               <input type="submit" name="op" value="Search" class="uq-header__search-query-submit" data-gtm-trigger="click">
             </span>
