--- a/packages/header/src/scss/_component.scss
+++ b/packages/header/src/scss/_component.scss
@@ -795,7 +795,7 @@ body.no-scroll {
   display: none;
 }
 
-// D7 overrides and hacks
+/* D7 overrides and hacks */
 
 .admin-menu {
   .slide-menu {
@@ -870,7 +870,7 @@ body.no-scroll {
 }
 
 
-//D7 and D9 search fixes 
+/* D7 and D9 search fixes */ 
 .uq-header__search-range {
   display: inline-block;
 }
@@ -882,6 +882,21 @@ body.no-scroll {
   display: inline-block;
   border-radius: 50%;
   background-color: core.$uq-purple;
+  margin:3px 3px 0 5px;
+  position: relative;
+
+  /* Missing form component styles */
+  appearance: none;
+  -webkit-appearance: none;
+  border: 1px solid #e7e3e0;
+  cursor: pointer;
+}
+.uq-header__search-range input[type=radio]+label {
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
+    padding-top: 0.125rem;
+    padding-left: 0;
 }
 
 .uq-header__search-range label {
@@ -893,6 +908,7 @@ body.no-scroll {
 
 input[type="radio"].uq-header__search-radio:checked {
   border-color: core.$uq-white;
+  border-width: 2px;
 }
 
 input[type="radio"].uq-header__search-radio:focus {
@@ -902,4 +918,12 @@ input[type="radio"].uq-header__search-radio:focus {
 input[type="radio"].uq-header__search-radio:checked::after {
   content:"";
   background-color: core.$uq-white;
+  border-radius: 50%;
+  content: "";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  height: 10px;
+  width: 10px;
 }
