--- a/packages/site-header/src/scss/_component.scss
+++ b/packages/site-header/src/scss/_component.scss
@@ -26,7 +26,7 @@
     flex-wrap: wrap;
     float: none;
     justify-content: space-between;
-    padding: .75rem core.$space-m;
+    padding: .75rem core.$space-compressed-xl;
     position: relative;
 
     &__right {
