--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -448,3 +448,7 @@
 .uq-accordion__content:not(.uq-accordion__content--active) {
   display: none;
 }
+
+.uq-footer__footer-item {
+  padding-right: 1rem;
+}
