--- a/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/src/patterns/form-validation/examples/password-reset.scss
@@ -12,11 +12,13 @@
     &-rating {
       color: #9c6b00;
     }
+
     &--fail {
       .story-password-strength-meter-text-rating {
         color: core.$alert;
       }
     }
+    
     &--strong {
       .story-password-strength-meter-text-rating {
         color: #2EA836;
@@ -65,10 +67,10 @@
   &-sequences {
     background-color: #FCFCFC;
     border-style: solid;
-    border-color: #DDDDDD;
+    border-color: #DDD;
     border-width: 1px;
     box-sizing: border-box;
-    color: #222222;
+    color: #222;
     padding: .9rem 1rem 1.2rem 3.1rem;
     position: relative;
     margin: 0;
