clean up storybook footer

--- a/packages/storybook-html/src/components/footer/footer.html
+++ b/packages/storybook-html/src/components/footer/footer.html
@@ -17,7 +17,7 @@
               <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
@@ -25,10 +25,10 @@
           <h2 class="uq-footer__navigation-title">Working at UQ</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
+              <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
+              <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Jobs at UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -45,10 +45,10 @@
           <h2 class="uq-footer__navigation-title">Current students</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
+              <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
+              <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -65,7 +65,7 @@
           <h2 class="uq-footer__navigation-title">Library</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
+              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
@@ -82,19 +82,19 @@
           <h2 class="uq-footer__navigation-title">Contact</h2>
           <ul class="uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
+              <a href="https://contacts.uq.edu.au" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
+              <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
             </li>
           </ul>
         </li>
@@ -114,7 +114,7 @@
               <a href="https://researchers.uq.edu.au/uqexperts" class="uq-footer__navigation-link">Find a subject matter expert</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/news/" class="uq-footer__navigation-link">UQ news</a>
+              <a href="https://www.uq.edu.au/news" class="uq-footer__navigation-link">UQ news</a>
             </li>
           </ul>
         </li>
@@ -122,10 +122,10 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Working at UQ</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current staff</a>
+              <a href="https://staff.uq.edu.au" class="uq-footer__navigation-link">Current staff</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://careers.uq.edu.au/" class="uq-footer__navigation-link">Jobs at UQ</a>
+              <a href="https://careers.uq.edu.au" class="uq-footer__navigation-link">Jobs at UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/strategic-plan" class="uq-footer__navigation-link">Strategic plan</a>
@@ -142,10 +142,10 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Current students</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
+              <a href="https://my.uq.edu.au" class="uq-footer__navigation-link">my.UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://my.uq.edu.au/programs-courses/" class="uq-footer__navigation-link">Programs and courses</a>
+              <a href="https://my.uq.edu.au/programs-courses" class="uq-footer__navigation-link">Programs and courses</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://www.uq.edu.au/events/calendar_view.php?category_id=16" class="uq-footer__navigation-link">Key dates</a>
@@ -162,7 +162,7 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Library</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
+              <a href="https://www.library.uq.edu.au" class="uq-footer__navigation-link">Library</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/locations-hours" class="uq-footer__navigation-link">Locations and hours</a>
@@ -179,19 +179,19 @@
           <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-gtm-action="Toggle">Contact</button>
           <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
             <li class="uq-footer__navigation-item">
-              <a href="https://contacts.uq.edu.au/" class="uq-footer__navigation-link">Contact UQ</a>
+              <a href="https://contacts.uq.edu.au" class="uq-footer__navigation-link">Contact UQ</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://researchers.uq.edu.au/" class="uq-footer__navigation-link">Find a researcher</a>
+              <a href="https://researchers.uq.edu.au" class="uq-footer__navigation-link">Find a researcher</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://about.uq.edu.au/faculties-schools-institutes-centres" class="uq-footer__navigation-link">Faculties, schools, institutes and centres</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://www.uq.edu.au/departments/" class="uq-footer__navigation-link">Divisions and departments</a>
+              <a href="https://www.uq.edu.au/departments" class="uq-footer__navigation-link">Divisions and departments</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://campuses.uq.edu.au/" class="uq-footer__navigation-link">Campuses, maps and transport</a>
+              <a href="https://campuses.uq.edu.au" class="uq-footer__navigation-link">Campuses, maps and transport</a>
             </li>
           </ul>
         </li>
@@ -205,7 +205,7 @@
           <li class="uq-footer__footer-item"><a href="https://www.linkedin.com/edu/school?id=10238" class="uq-footer__meta-icons--linkedin uq-footer__meta-icons" aria-label="linkedin" data-gtm-label="Linkedin"></a></li> 
           <li class="uq-footer__footer-item"><a href="https://twitter.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Twitter" data-gtm-label="Twitter"></a></li>
           <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Youtube" data-gtm-label="Youtube"></a></li>
-          <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld/" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Instagram" data-gtm-label="Instagram"></a></li>
         </ul>
       </nav> 
       <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
@@ -221,13 +221,13 @@
     <nav class="uq-footer__footer" aria-label="Terms and conditions">
       <ul class="uq-footer__footer-list">
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/legal/terms-of-use/" class="uq-footer__link">Privacy and terms of use</a>
+              <a href="https://www.uq.edu.au/legal/terms-of-use" class="uq-footer__link">Privacy and terms of use</a>
           </li>
           <li class="uq-footer__footer-item">
-            <a href="https://uq.edu.au/accessibility/" class="uq-footer__link">Accessibility</a>
+            <a href="https://uq.edu.au/accessibility" class="uq-footer__link">Accessibility</a>
           </li>
           <li class="uq-footer__footer-item">
-              <a href="https://www.uq.edu.au/rti/" class="uq-footer__link">Right to information</a>
+              <a href="https://www.uq.edu.au/rti" class="uq-footer__link">Right to information</a>
           </li>
           <li class="uq-footer__footer-menu__item">
             <a href="https://my.uq.edu.au/feedback?r=https://uq.edu.au" class="uq-footer__link">Feedback</a>
